--- a/package.json
+++ b/package.json
@@ -9,9 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@brainhubeu/react-carousel": "^1.19.26",
+    "aos": "^2.3.4",
+    "emailjs-com": "^3.2.0",
     "next": "12.2.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-accessible-accordion": "^5.0.0",
+    "react-compare-slider": "^2.2.0",
+    "react-cookie-consent": "^7.2.1",
+    "react-dom": "18.2.0",
+    "react-icons": "^4.3.1",
+    "react-scroll": "^1.8.4",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "eslint": "8.18.0",
